# pavo

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
docs/: accepted-stem-asr-recovery-report.json  backstory.md  conan-demo-video-report.json  conan-diagnostic-stems.md  conan-experience-comparison-report.json  conan-experience-like-fixture.json  conan-experience-like.md  conan-old-sitcom-report.json  conan-real-media-review-bundle-manifest.json  conan-real-media-review-page-report.json  conan-real-media-review-report.json  conan-real-media-review-sheet.json  conan-real-media-review.html  diarization.md  mac-mini-migration.md  media-tests.md  nz-decompose-proof-search-report.json  nz-slang-comparison-report.json  plaud-anchor-quality-report.json  plaud-c37-anchor-rerun-command-report.json  plaud-c37-anchor-review-browser-report.json  plaud-c37-anchor-review-bundle-manifest.json  plaud-c37-anchor-review-bundle-report.json  plaud-c37-anchor-review-gate-report.json  plaud-c37-anchor-review-page-report.json  plaud-c37-anchor-review-status-report.json  plaud-c37-decompose-report.json  plaud-c37-speaker1-anchor-review-clips.json  plaud-c37-speaker1-anchor-review-packet.json  plaud-c37-speaker1-anchor-review-sheet.json  plaud-c37-speaker1-anchor-review.html  plaud-d535-decompose-report.json  plaud-real-recording-report.json  proof-matrix.md  proof-status-summary.json  proof.md  real-media-accepted-stems-audit.json  stem-asr-improvement-report.json  stem-asr-improvement-search-report.json  stem-merge-policy-report.json
pavo/: __init__.py  audio.py  batch.py  brief.py  cli.py  config.py  download.py  meetings.py  overlap.py  plaud.py  proof.py  render.py  review.py  transcribe.py  worker.py
(+17 files in other folders)
