[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pavo"
version = "0.1.0"
description = "Eidos capture CLI for Plaud recordings and audio evidence"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
pavo = "pavo.cli:main"

[tool.setuptools.packages.find]
include = ["pavo*"]
