[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pavo"
version = "0.1.0"
description = "Eidos capture CLI for Plaud recordings and audio evidence"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["audio", "codex", "eidos", "plaud", "transcription"]
dependencies = []

[project.urls]
Homepage = "https://github.com/eidos-agi/pavo"
Repository = "https://github.com/eidos-agi/pavo"
Issues = "https://github.com/eidos-agi/pavo/issues"

[project.scripts]
pavo = "pavo.cli:main"

[tool.setuptools.packages.find]
include = ["pavo*"]
