[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pavo"
version = "0.1.0"
description = "Data-science-led transcription workbench for audio control, diarization, dictionaries, routing, and tasks"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["audio", "codex", "diarization", "plaud", "recordings", "transcription"]
dependencies = []

[project.urls]
Homepage = "https://github.com/eidos-agi/pavo"
Repository = "https://github.com/eidos-agi/pavo"
Issues = "https://github.com/eidos-agi/pavo/issues"

[project.scripts]
pavo = "pavo.cli:main"
pavo-worker = "pavo.worker:main"

[tool.setuptools.packages.find]
include = ["pavo*"]
